--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+			<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
